# bachelors

./: .gitignore  README.md
.devcontainer/: devcontainer.json
1st-sem/BusFund/: 4 P’s Marketing Mix Template.docx
2nd-sem/: README.md
2nd-sem/ProgLangs/: labs_en.html
2nd-sem/Python/exams/poseidon_project/: data_generator.py  pyproject.toml
2nd-sem/Python/exams/poseidon_project/config/: server_config.json  vessels.json
2nd-sem/Python/exams/poseidon_project/src/poseidon/: __main__.py  config_loader.py  dependencies.py  main.py  models.py  persistence.py  vessel_manager.py  visualization.py
2nd-sem/Python/exams/poseidon_project/tests/: conftest.py  test_data_cleaning.py  test_models.py  test_persistence.py
2nd-sem/Python/w10/lect10/src/: 01_chart_choice_and_workhorses.ipynb  01_chart_choice_and_workhorses.py  02_matplotlib_and_seaborn.ipynb  03_plotly_maps_and_performance.ipynb  README.md  _build_space_missions.py  earthquakes.csv  pyproject.toml  space_missions.csv  space_race_data.csv
2nd-sem/Python/w11/lect11/src/: 01_sklearn_workflow.ipynb  01_sklearn_workflow.py  03_computer_vision_and_detection.ipynb  05_mnist_pytorch_digits.ipynb  05_mnist_pytorch_digits.py  iris_knn_model_v1.joblib  iris_knn_model_v1.json  pyproject.toml
2nd-sem/Python/w12/lect12/src/: 01_tokens_and_sampling.ipynb  02_ollama_basics_and_state.py  03_streaming_and_fastapi.py  04_structured_output_and_rag.ipynb  pyproject.toml
FuncProg/Materials/: records_trees.hs  till_midetrm.hs
ImpProg/thank-you/: a.out  terminal_draw.h
OOP/: README.md
OOP/Week 4/: cakeshop.ipynb
OOP/w10/: README.md
OOP/w4/: README.md
OOP/w5/: README.md  lib-design.puml
OOP/w7/: README.md
OOP/w8/: README.md
OOP/w9/: README.md
ProgLangs/: BasicJavaStudyGuide-en.md  README.md  labs.html  labs_en.html
ProgLangs/* lab04-05/: AdderStructureTest.java  ArtistStructureTest.java  CaesarCipherStructureTest.java  FanStructureTest.java  FibonacciStructureTest.java  IncantationStructureTest.java  IncrementStructureTest.java  Lab04TestSuite.java  RecordLabelStructureTest.java  SoliloquyStructureTest.java  TimeStructureTest.java  TimeTestSuite.java  TriangularNumbersStructureTest.java  check.cmd
ProgLangs/Week 1/: Hello25.java
ProgLangs/w5/: README.md
ProgLangs/w6-abs/: Lab06TestSuite.java
ProgLangs/w9/: README.md
Python/: README.md
Python/w2/: README.md  (+1 more)
webDev/: README.md
(+820 files in other folders)
