[project]
name = "lecture10-src-demos"
version = "0.1.0"
description = "Classroom demo scripts for Lecture 10: Python data visualization"
requires-python = ">=3.12"
dependencies = [
  "matplotlib",
  "pandas",
  "plotly",
  "polars",
  "pyarrow",
  "seaborn",
]

[dependency-groups]
dev = [
  "ipykernel",
  "jupyterlab",
]
