[project]
name = "lecture12-src-demos"
version = "0.1.0"
description = "Classroom demo scripts for Lecture 12: applied Python for generative AI and local inference (tokens, Ollama, streaming, structured output, embeddings, RAG, guardrails)"
requires-python = ">=3.12"
dependencies = [
  "tiktoken>=0.8",
  "ollama>=0.4.7",
  "fastapi>=0.118",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "httpx>=0.28",
]

[dependency-groups]
dev = [
  "ipykernel",
  "jupyterlab",
]
